samples/_failures_safe/1761612912_2aee56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cdc69c7.c: In function ‘main’:
./samples/SAFE/__tmp_6cdc69c7.c:197:5: error: expected declaration or statement at end of input
  197 |     print_tokens(tokens, token_count);
      |     ^~~~~~~~~~~~
